--- a/package.json
+++ b/package.json
@@ -12,12 +12,17 @@
     "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.8.4",
     "@mui/joy": "^5.0.0-alpha.35",
+    "@mui/lab": "^5.0.0-alpha.90",
     "@mui/material": "^5.4.4",
+    "@mui/x-date-pickers": "^5.0.0-beta.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "aos": "^2.3.4",
     "bootstrap": "^5.1.3",
+    "date-fns": "^2.28.0",
     "firebase": "^9.6.8",
+    "mapbox-gl": "^2.9.2",
     "react": "^17.0.2",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^17.0.2",
@@ -25,7 +30,10 @@
     "react-faq-component": "^1.3.3",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
+    "react-simple-typewriter": "^3.0.1",
+    "react-tsparticles": "^2.1.3",
     "styled-components": "^5.3.5",
+    "tsparticles": "^2.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
