--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "y",
+  "name": "school-management-client-site",
+  
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -22,8 +23,8 @@
     "bootstrap": "^5.1.3",
     "date-fns": "^2.28.0",
     "firebase": "^9.6.8",
-    "firebase-admin": "^11.0.1",
-    "firebase-functions": "^3.22.0",
+
+
     "mapbox-gl": "^2.9.2",
     "react": "^17.0.2",
     "react-bootstrap": "^2.4.0",
@@ -61,17 +62,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
-  "main": "index.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Aditi-Datta/new-repo.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Aditi-Datta/new-repo/issues"
-  },
-  "homepage": "https://github.com/Aditi-Datta/new-repo#readme"
+  }
+  
 }
